--- a/www/view/biblioteca_GPS.html
+++ b/www/view/biblioteca_GPS.html
@@ -1,6 +1,8 @@
-<ion-view view-title="Bibliotecas">
-	<ion-nav-bar class="bar-positive bar-azulUFC">
-		<ion-nav-back-button class="ion-android-arrow-back ion-loading-c" side="left"></ion-nav-back-button>
+<ion-view view-title="Localização">
+		<ion-nav-bar class="bar-positive bar-azulUFC">
+		<ion-nav-buttons side="left">
+		      <button ng-click="goBack()" class="button button-icon ion-android-arrow-back"></button>
+		</ion-nav-buttons>
 	</ion-nav-bar>
 	<filter-bar-search class="filter-bar" style="height:0;">
 		<div  class="filter-bar-wrapper filter-bar-stable filter-bar-transition-horizontal ">
