--- a/www/view/biblioteca_exibicao.html
+++ b/www/view/biblioteca_exibicao.html
@@ -1,6 +1,8 @@
 <ion-view  view-title="{{Biblioteca.sigla}}">
 	<ion-nav-bar class="bar-positive bar-azulUFC">
-		<ion-nav-back-button class="ion-android-arrow-back ion-loading-c" side="left"></ion-nav-back-button>
+		<ion-nav-buttons side="left">
+	    	<button ng-click="goBack()" class="button button-icon ion-android-arrow-back"></button>
+	  	</ion-nav-buttons>
 	</ion-nav-bar>
 	
 	<ion-content >
@@ -8,7 +10,7 @@
 
 	<div class="has-header " style="z-index:1;">
 		
-		<img id="img-Biblio-Exibi" src="img/{{Biblioteca.img}}" style='background-color:#EEE;height:40vh;width:100%'>
+		<img id="img-Biblio-Exibi" src="img/{{Biblioteca.sigla}}.png" style='background-color:#EEE;height:40vh;width:100%'>
 		
 		<a class="item-Biblio" ng-href="#/app/Biblioteca_GPS" >
 			<div>
