--- a/www/view/busca.html
+++ b/www/view/busca.html
@@ -2,7 +2,7 @@
 	<ion-view view-title="Pesquisa">
 		<ion-nav-bar class="bar-positive bar-azulUFC">
 			<ion-nav-buttons side="left">
-		    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
+		    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 		  	</ion-nav-buttons>
 		  	<ion-nav-buttons side="right">
 		  	      <button class="button button-icon icon mdi mdi-magnify button-size-busca" ng-click="showFilterBar()" ng-model="busca"> </button>
