--- a/www/view/livrosAlugados.html
+++ b/www/view/livrosAlugados.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Livros Alugados">
 	<ion-nav-bar class="bar-positive bar-azulUFC">
 		<ion-nav-buttons side="left">
-	    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
+			<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	  	</ion-nav-buttons>
 	</ion-nav-bar>
 	<ion-content class="has-header">
