--- a/www/view/livrosAlugadosAddLivro.html
+++ b/www/view/livrosAlugadosAddLivro.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Adicionar Livro">
 	<ion-nav-bar class="bar-positive bar-azulUFC">
-		<ion-nav-back-button class="button-clear">
-    		<i class="mdi mdi-arrow-left"></i> Back
-  		</ion-nav-back-button>
+		<ion-nav-buttons side="left">
+	    	<button ng-click="goBack()" class="button button-icon ion-android-arrow-back"></button>
+	  	</ion-nav-buttons>
 	</ion-nav-bar>
     <ion-content>
     	<h2 style="text-align: center;">Adicione os livros para lembrete</h2>
