--- a/www/view/busca.html
+++ b/www/view/busca.html
@@ -18,7 +18,7 @@
 	        	<ion-item ng-repeat="livro in livros | filter: busca" href="#/livroInfo/{{livro.id}}">
 	        		<p><strong>{{livro.nome_livro}}</strong></p>
 	        		<p>{{livro.autor}}</p>
-	        		<p>Localização: {{livro.codigo}} ({{livro.local}})</p>
+	        		<p>N. de chamada: {{livro.codigo}} ({{livro.local}})</p>
 	        		<p>Tipo de obra: {{livro.obra}}</p>
 	        	</ion-item>
 	        </ion-list>
