--- a/www/css/style.css
+++ b/www/css/style.css
@@ -92,9 +92,11 @@ button.centralizar{
 
 
 .bloco{
-	margin: 20px 10px;
+	padding: 10px;
 	}
-
+.bloco p{
+	color: #222;
+}
 .box{
 	margin-top: 20px;
 }
