--- a/www/view/buscaInfoLivro.html
+++ b/www/view/buscaInfoLivro.html
@@ -7,6 +7,7 @@
     <ion-content>
     	<div class="row responsive-sm bloco">
     		<p><strong>Título: </strong> {{livro.nome_livro}} </p>
+            <p><strong>Número de chamada:</strong> {{livro.codigo}} ({{livro.local}})</p>
     		<p><strong>Total de exemplares: </strong> {{livro.numLivros}} </p>
     		<p><strong>Disponível no acervo: </strong> {{livro.disponivel}} </p>
     	</div>
