--- a/www/css/controle.css
+++ b/www/css/controle.css
@@ -11,7 +11,7 @@
 	padding-bottom:0.22in;
 	padding-left:0.22in;
 	padding-right:20vw;
-	font-family:Confessions bold;
+	/*font-family:Confessions bold;*/
 	background-color:#FFF;
 	width:100%;
 }
@@ -116,6 +116,12 @@ a.item.item-thumbnail-left{
 	left:0.55in !important;
 }
 
+.color-text{
+	color: #222 !important;
+}
+.color-text p{
+	color: #222 !important;
+}
 
 @keyframes bounceToLeft {
    0% {
