--- a/www/view/bibliotecas.html
+++ b/www/view/bibliotecas.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Bibliotecas">
 	<ion-nav-bar class="bar-positive bar-azulUFC">
 		<ion-nav-buttons side="left">
-	    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+	    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
 	  	</ion-nav-buttons>
 	</ion-nav-bar>
 	<div class="float-button">
@@ -20,7 +20,7 @@
 			<div  ng-repeat="biblio in Bibliotecas">
 				<a class="item item-thumbnail-left item-text-wrap" style="" ng-href="#/app/Biblioteca" ng-click="TradeId({{biblio.id}})" >
 					<img src="img/{{biblio.sigla}}.png">
-					<h2 id="Biblio_{{biblio.id}}" >{{biblio.nome}} - {{biblio.sigla}} </h2>
+					<h2 id="Biblio_{{biblio.id}}" class="color-text">{{biblio.nome}} - {{biblio.sigla}} </h2>
 				</a>
 			</div>
 		</ion-list>
