--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -10,8 +10,8 @@
 
   <!-- Left menu -->
   <ion-side-menu side="left" >
-    <header class="bar bar-header bar-stable">
-      <h1 class="title">Menu</h1>
+    <header class="bar bar-header bar-stable ufcLogo">
+      <img class="title" src="img/brasao1_horizontal_cor_72dpi.png">
     </header>
     <ion-content class="has-header">
       <ion-list>
@@ -31,7 +31,7 @@
         <ion-item menu-close href="#/app/codificacao">
           <i class="mdi mdi-file-document"></i><span class="text-vertical-aligned-menu">Guia de Codificação</span>
         </ion-item>
-        <ion-item menu-close>
+        <ion-item menu-close href="#/app/sobre">
           <i class="mdi mdi-information"></i><span class="text-vertical-aligned-menu">Sobre</span>
         </ion-item>
       </ion-list>
