--- a/www/view/home.html
+++ b/www/view/home.html
@@ -20,8 +20,8 @@
   	</ion-nav-bar>
 	
 	<ion-content class="has-header">
-			<div style="width:100%;margin-top:2vh">
-				<div id="MenuTopo" style="padding:0;margin:0;background:#0066A5;height:6vh;">
+			<div style="width:100%;margin-top:2vh"> <!--margin-top:2vh -->
+				<div id="MenuTopo" style="padding:0;margin:0;background:#0066A5;height:7vh;">
 					<button class="button-small button-Home" ng-click="PreviewBiblio()" style="float:left;"><i class="ion-chevron-left"></i></button>
 					<button class="button-small button-Home" ng-click="NextBiblio()" style="float:right;"><i class="ion-chevron-right"></i></button>
 					<div id="NomeBiblio" style="padding:1vh;width:72.8%;margin:auto;"><p style="text-align:center;color:#EEE;font-size:4vh;margin:0;">{{Biblioteca.sigla}}</p></div>
