--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -26,10 +26,10 @@
         </ion-item>
         </ion-item>
         <ion-item menu-close href="#/app/livrosAlugados">
-          <i class="mdi mdi-clipboard-text"></i><span class="text-vertical-aligned-menu">Livros Alugados</span>
+          <i class="mdi mdi-book"></i><span class="text-vertical-aligned-menu">Livros Alugados</span>
         </ion-item>
         <ion-item menu-close href="#/app/codificacao">
-          <i class="mdi mdi-file-document"></i><span class="text-vertical-aligned-menu">Guia de Codificação</span>
+          <i class="mdi glyphter">F</i><span class="text-vertical-aligned-menu">Guia de Codificação</span>
         </ion-item>
         <ion-item menu-close href="#/app/sobre">
           <i class="mdi mdi-information"></i><span class="text-vertical-aligned-menu">Sobre</span>
