--- a/www/view/buscaInfoLivro.html
+++ b/www/view/buscaInfoLivro.html
@@ -7,6 +7,7 @@
     <ion-content>
     	<div class="list color-text no-border">
             <div class="item">
+                <img ng-src="{{livro.capa}}" class="capaInfo">
         		<h2><strong>Título: </strong> {{livro.nome_livro}} </h2>
                 <p class="infoLivro"><strong>Número de chamada:</strong> {{livro.codigo}} ({{livro.local}})</p>
         		<p class="infoLivro"><strong>Total de exemplares: </strong> {{livro.numLivros}} </p>
