--- a/www/view/sobre.html
+++ b/www/view/sobre.html
@@ -4,5 +4,18 @@
 	    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
 	  	</ion-nav-buttons>
 	</ion-nav-bar>
-      <ion-content>Hello World!</ion-content>
+      <ion-content>
+      <div class="text-margin color-text">
+	      	<p>Codex&trade; é um aplicativo desenvolvido para fins educacionais, desenvolvido por alunos do curso de Sistemas e Mídias Digitais da Universidade Federal do Ceará (UFC), tendo a Biblioteca da Faculdade de Economia, Administração, Atuária e Contabilidade (BFEAAC) como cliente, porém com o objetivo de atender as necessidades de todas as biblioteca da UFC localizadas em Fortaleza.</p>
+
+	      	<p>O Codex&trade; foi densenvolvido para ser utilizado na plataforma Android, desenvolvido utilizando HTML, CSS e JavaScript. Utilizando como softwares de desenvolvimento o Ionic&reg; e o Apache Cordova.</p>
+
+	      	<p>Para saber mais sobre a Equipe M.A.Y.B.E, visite o nosso blog: <a onclick="window.open('https://equipemaybe.wordpress.com/', '_system', 'location=no'); return false;" href="#" style="color: #004b81;">https://equipemaybe.wordpress.com/</a>. </p>
+
+	      	<img src="img/cc.png" style="width: 40%;" id="cc">
+	      	<p id="licenca">Esta obra está licenciada com uma Licença </br> Creative Commons Atribuição Não-Comercial 2.5 Brasil.</p>
+      	</div>
+
+      </ion-content>
+      
 </ion-view>
