--- a/www/view/sobre.html
+++ b/www/view/sobre.html
@@ -10,7 +10,7 @@
 
 	      	<p>O Codex&trade; foi densenvolvido para ser utilizado na plataforma Android, desenvolvido utilizando HTML, CSS e JavaScript. Utilizando como softwares de desenvolvimento o Ionic&reg; e o Apache Cordova.</p>
 
-	      	<p>Para saber mais sobre a Equipe M.A.Y.B.E, visite o nosso blog: <a onclick="window.open('https://equipemaybe.wordpress.com/', '_system', 'location=no'); return false;" href="#" style="color: #004b81;">https://equipemaybe.wordpress.com/</a>. </p>
+	      	<p>Para saber mais sobre a Equipe M.A.Y.B.E, visite o nosso blog: <a href="#" ng-click="openMaybe()" style="color: #004b81;">https://equipemaybe.wordpress.com/</a>.</p>
 
 	      	<img src="img/cc.png" style="width: 40%;" id="cc">
 	      	<p id="licenca">Esta obra está licenciada com uma Licença </br> Creative Commons Atribuição Não-Comercial 2.5 Brasil.</p>
@@ -19,3 +19,6 @@
       </ion-content>
       
 </ion-view>
+
+<!-- onclick="window.open('https://equipemaybe.wordpress.com/', '_system', 'location=yes'); return false;"
+-->
