--- a/www/view/biblioteca_GPS.html
+++ b/www/view/biblioteca_GPS.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Localização">
-		<ion-nav-bar class="bar-positive bar-azulUFC">
+		<ion-nav-bar class="bar-positive bar-azulUFC bar-azulUfc-shadow">
 		<ion-nav-buttons side="left">
 		      <button ng-click="goBack()" class="button button-icon ion-android-arrow-back"></button>
 		</ion-nav-buttons>
