--- a/www/view/livrosAlugados.html
+++ b/www/view/livrosAlugados.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Livros Alugados">
-	<ion-nav-bar class="bar-positive bar-azulUFC">
+	<ion-nav-bar class="bar-positive bar-azulUFC bar-azulUfc-shadow">
 		<ion-nav-buttons side="left">
 			<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
 	  	</ion-nav-buttons>
