--- a/www/view/busca.html
+++ b/www/view/busca.html
@@ -1,6 +1,6 @@
 <body>
 	<ion-view view-title="Pesquisa">
-		<ion-nav-bar class="bar-positive bar-azulUFC">
+		<ion-nav-bar class="bar-positive bar-azulUFC bar-azulUfc-shadow">
 			<ion-nav-buttons side="left">
 		    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
 		  	</ion-nav-buttons>
@@ -13,6 +13,7 @@
     		</ion-refresher>
     		<div ng-show="busca.length < 3 || busca.length == 0" class="empty-screen">
 	        	<img src="img/livrobusca.png">
+	        	
 	        </div>
 	        <ion-list ng-show="busca.length >= 3">
 	        	<ion-item ng-repeat="livro in livros | filter: busca" href="#/livroInfo/{{livro.id}}" >
@@ -25,8 +26,8 @@
 		        	</div>	
 	        	</ion-item>
 	        </ion-list>
-	        <div ng-show="livros.length == 0 && busca.length >= 3">
-	        	<p class="text-margin color-text">Nenhum resultado encontrado</p>
+	        <div ng-show="livros.length == 0 && busca.length >= 3" class="empty-screen">
+	        	<img src="img/pesquisarerro.png">
 	        </div>
 		</ion-content>
 	</ion-view>
