--- a/www/view/home.html
+++ b/www/view/home.html
@@ -4,7 +4,7 @@
 			<img src="img/codexLogo.png">
 		</div>
 	</ion-nav-title>
-	<ion-nav-bar class="bar-positive bar-azulUFC">
+	<ion-nav-bar class="bar-positive bar-azulUFC ">
 		<ion-nav-buttons side="left">
 	    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
 	  	</ion-nav-buttons>
@@ -12,15 +12,15 @@
 	  		
     	</ion-nav-buttons>
     	<ion-nav-buttons side="right">
-    		<button  class="button button-icon icon mdi mdi-bell-outline button-size-busca"></button>
+    		<button  class="button button-icon icon mdi mdi-bell-outline button-size-busca" ></button>
     		<a href="#/app/busca/true">
-      			<button  class="button button-icon icon mdi mdi-magnify button-size-busca" ng-click="doSomething()"></button>
+      			<button  class="button button-icon icon mdi mdi-magnify button-size-busca" id="busca-icon" ng-click="doSomething()"></button>
       		</a>
     	</ion-nav-buttons>
   	</ion-nav-bar>
 	
 	<ion-content class="has-header">
-			<div style="width:100%;margin-top:2vh"> <!--margin-top:2vh -->
+			<div style="width:100%;z-index: 9999;"> <!--margin-top:2vh -->
 				<div id="MenuTopo" style="padding:0;margin:0;background:#0066A5;height:7vh;">
 					<button class="button-small button-Home" ng-click="PreviewBiblio()" style="float:left;"><i class="ion-chevron-left"></i></button>
 					<button class="button-small button-Home" ng-click="NextBiblio()" style="float:right;"><i class="ion-chevron-right"></i></button>
@@ -50,7 +50,7 @@
 				</button>
 				
 				<div>
-					<p>Você Sabia ?</p>
+					<p >Você Sabia ?</p>
 				</div>
 			</div>	
 			<div id="Curiosidade" data-tap-disabled="false">
