--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -13,30 +13,32 @@
     <header class="bar bar-header bar-stable">
      <!--<img class="title" src="img/brasao1_horizontal_cor.svg"-->
       <div class="ufcLogo">
-        <img class="title" style="margin-top: 2px; margin-left: 14px;" src="img/brasao1_horizontal_cor_72dpi.png" />
+        <img class="title" style="margin-top: 2px; margin-left: 17px;" src="img/brasao1_horizontal_cor_72dpi.png" />
       </div>
     </header>
     <ion-content class="has-header">
       <ion-list>
-        <ion-item menu-close href="#/app/home">
-          <i ng-class="{'mdi': isAndroid, 'mdi-home': isAndroid, 'ion-ios-home': isIOS}"></i><span class="text-vertical-aligned-menu">Home</span>
-        </ion-item>
-        <ion-item menu-close href="#/app/busca/false">
-          <i class="mdi mdi-magnify"></i><span class="text-vertical-aligned-menu">Pesquisar Livros</span>
-        </ion-item>  
-        <ion-item menu-close href="#/app/Bibliotecas">
-           <i class="mdi mdi-city"></i><span class="text-vertical-aligned-menu">Bibliotecas</span>
-        </ion-item>
-        </ion-item>
-        <ion-item menu-close href="#/app/livrosAlugados">
-          <i class="mdi glyphter" id="alugados">B</i><span class="text-vertical-aligned-menu">Livros Alugados</span>
-        </ion-item>
-        <ion-item menu-close href="#/app/codificacao">
-          <i class="mdi glyphter">A</i><span class="text-vertical-aligned-menu">Guia de Codificação</span>
-        </ion-item>
-        <ion-item menu-close href="#/app/sobre">
-          <i class="mdi mdi-information"></i><span class="text-vertical-aligned-menu">Sobre</span>
-        </ion-item>
+        <div class="sideMenu">
+          <ion-item menu-close href="#/app/home">
+            <i ng-class="{'mdi': isAndroid, 'mdi-home': isAndroid, 'ion-ios-home': isIOS}"></i><span class="text-vertical-aligned-menu">Home</span>
+          </ion-item>
+          <ion-item menu-close href="#/app/busca/false">
+            <i class="mdi mdi-magnify"></i><span class="text-vertical-aligned-menu">Pesquisar Livros</span>
+          </ion-item>  
+          <ion-item menu-close href="#/app/Bibliotecas">
+             <i class="mdi mdi-city"></i><span class="text-vertical-aligned-menu">Bibliotecas</span>
+          </ion-item>
+          </ion-item>
+          <ion-item menu-close href="#/app/livrosAlugados">
+            <i class="mdi glyphter" id="alugados">B</i><span class="text-vertical-aligned-menu"> Livros Alugados</span>
+          </ion-item>
+          <ion-item menu-close href="#/app/codificacao">
+            <i class="mdi glyphter">A</i><span class="text-vertical-aligned-menu">Guia de Codificação</span>
+          </ion-item>
+          <ion-item menu-close href="#/app/sobre">
+            <i class="mdi mdi-information"></i><span class="text-vertical-aligned-menu">Sobre</span>
+          </ion-item>
+        </div>
       </ion-list>
     </ion-content>
   </ion-side-menu>
