--- a/www/view/busca.html
+++ b/www/view/busca.html
@@ -20,8 +20,9 @@
 	        		<div class="color-text">
 		        		<p style="white-space: normal;"><strong>{{livro.nome_livro}}</strong></p>
 		        		<p>{{livro.autor}}</p>
-		        		<p>N. de chamada: {{livro.codigo}} ({{livro.local}})</p>
-		        		<i class="mdi mdi-information" style="float: right; color: #999;"></i>
+		        		<i class="mdi mdi-information" id="iconPesquisa"></i>
+
+		        		<p>N. de chamada: {{livro.codigo}} ({{livro.local}})</p>		  
 		        		<p>Tipo de obra: {{livro.obra}}</p>
 		        	</div>	
 	        	</ion-item>
