Imgs_PlaceHolder Simplificacao_Db

--- a/www/view/bibliotecas.html
+++ b/www/view/bibliotecas.html
@@ -19,8 +19,8 @@
 		<ion-list>
 			<div  ng-repeat="biblio in Bibliotecas">
 				<a class="item item-thumbnail-left item-text-wrap" style="" ng-href="#/app/Biblioteca" ng-click="TradeId({{biblio.id}})" >
-					<img src="img/{{biblio.sigla}}.png">
-					<h2 id="Biblio_{{biblio.id}}" class="color-text">{{biblio.nome}} - {{biblio.sigla}} </h2>
+					<img src="img/{{sigla(biblio.nome)}}.png" onerror="this.src='img/PlaceHolder.png'" >
+					<h2 id="Biblio_{{biblio.id}}" class="color-text">{{biblio.nome}} - {{sigla(biblio.nome)}} </h2>
 				</a>
 			</div>
 		</ion-list>
