--- a/www/view/biblioteca_exibicao.html
+++ b/www/view/biblioteca_exibicao.html
@@ -1,4 +1,4 @@
-<ion-view  view-title="{{Biblioteca.sigla}}">
+<ion-view  view-title="{{sigla(Biblioteca.nome)}}">
 	<ion-nav-bar class="bar-positive bar-azulUFC bar-azulUfc-shadow">
 		<ion-nav-buttons side="left">
 	    	<button ng-click="goBack()" class="button button-icon ion-android-arrow-back"></button>
@@ -10,7 +10,7 @@
 
 	<div class="has-header " style="z-index:1;">
 		
-		<img id="img-Biblio-Exibi" src="img/{{Biblioteca.sigla}}.png" style='background-color:#EEE;height:40vh;width:100%'>
+		<img id="img-Biblio-Exibi" src="img/{{sigla(Biblioteca.nome)}}.png" onerror="this.src='img/PlaceHolder.png'" style='background-color:#EEE;height:40vh;width:100%'>
 		
 		<a class="item-Biblio" ng-href="#/app/Biblioteca_GPS" >
 			<div>
