--- a/www/view/home.html
+++ b/www/view/home.html
@@ -24,12 +24,12 @@
 				<div id="MenuTopo" style="padding:0;margin:0;background:#0066A5;height:7vh;">
 					<button class="button-small button-Home" ng-click="PreviewBiblio()" style="float:left;"><i class="ion-chevron-left"></i></button>
 					<button class="button-small button-Home" ng-click="NextBiblio()" style="float:right;"><i class="ion-chevron-right"></i></button>
-					<div id="NomeBiblio" style="padding:1vh;width:72.8%;margin:auto;"><p style="text-align:center;color:#EEE;font-size:4vh;margin:0;">{{Biblioteca.sigla}}</p></div>
+					<div id="NomeBiblio" style="padding:1vh;width:72.8%;margin:auto;"><p style="text-align:center;color:#EEE;font-size:4vh;margin:0;">{{sigla}}</p></div>
 				</div>
 				
 				<a ng-href="#/app/Biblioteca">
 				<div style="width:100%;margin:0;height:35vh;">
-					<img id="imgBiblio" src="img/{{Biblioteca.sigla}}.png" style="height:100%;width:100%" />
+					<img id="imgBiblio" src="img/{{sigla}}.png" onerror="this.src='img/PlaceHolder.png'" style="height:100%;width:100%" />
 				</div>
 				</a>
 				
