--- a/www/view/livrosAlugados.html
+++ b/www/view/livrosAlugados.html
@@ -18,10 +18,10 @@
 				</div>
 			</ion-item>
 		</ion-list>
-		
+
 	</ion-content>
 	<div class="float-button">
-		<a href="#/app/addLivrosAlugados">
+		<a href="#/addLivrosAlugados">
 			<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
 				<i class="material-icons">add</i>
 			</button>
