--- a/www/view/buscaInfoLivro.html
+++ b/www/view/buscaInfoLivro.html
@@ -7,15 +7,15 @@
     <ion-content>
     	<div class="list color-text no-border">
             <div class="item">
-                <img ng-src="{{livro.capa}}" class="capaInfo">
-                <div class="infoLivro-item">
-            		<h2><strong>Título: </strong> {{livro.nome_livro}} </h2>
-                    <p class="infoLivro"><strong>Número de chamada:</strong> {{livro.codigo}} ({{livro.local}})</p>
-            		<p class="infoLivro"><strong>Total de exemplares: </strong> {{livro.numLivros}} </p>
-            		<p class="infoLivro"><strong>Disponível no acervo: </strong> {{livro.disponivel}} </p>
+                <img ng-src="{{livroInfo.capa}}" class="capaInfo">
+                <div class="infolivroInfo-item">
+            		<h2><strong>Título: </strong> {{livroInfo.nome_livro}} </h2>
+                    <p class="infolivroInfo"><strong>Número de chamada:</strong> {{livroInfo.codigo}} ({{livroInfo.local}})</p>
+            		<p class="infolivroInfo"><strong>Total de exemplares: </strong> {{livroInfo.numLivros}} </p>
+            		<p class="infolivroInfo"><strong>Disponível no acervo: </strong> {{livroInfo.disponivel}} </p>
                 </div>
             </div>
     	</div>
-        
+
     </ion-content>
 </ion-view>
